<resources>
    <string name="app_name">Exzellenzkoch</string>
    <string name="register">Registrieren</string>
    <string name="email_address">Email Adresse</string>
    <string name="optional_user_id">Gib dir einen Nutzernamen (optional)</string>
    <string name="email_example">max.musterman@muster.de</string>
    <string name="password">Passwort</string>
    <string name="user_id">Nutzername</string>
    <string name="recipe_list_recipe_title">Meine Rezepte</string>
    <string name="recipe_list_create_recipe_button">Neues Rezept erstellen</string>
    <string name="edit_recipe_button">bearbeiten</string>
    <string name="delete">löschen</string>
    <string name="admin_title">Lösche oder entmelde Nutzer/Rezepte</string>
    <string name="admin_flagged_recipes">Gemeldete Rezepte</string>
    <string name="flagged_users">Gemeldete Nutzer</string>
    <string name="enter_new_password">Gib dein neues Passwort ein</string>
    <string name="change_password">Passwort ändern</string>
    <string name="search_result_textView">Suchergebnisse</string>
    <string name="sorted_after">Sortieren nach: </string>
    <string name="my_favourite">Meine Favoriten</string>
    <string name="textView_feed">Feed</string>
    <string name="feed_headline">Die neusten Rezepte</string>
    <string name="group_title_fragment">Gruppen</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="friend_title">Freunde</string>
    <string name="friend_requests">Freundschaftsanfragen</string>
    <string name="search_button">Suchen</string>
    <string name="enter_user_id">Gib dir einen Nutzernamen</string>
    <string name="admin_remove_item">Löschen</string>
    <string name="public_recipe_search_title">Suche ein Rezept</string>
    <string name="recipe_title">Titel des Rezeptes</string>

    <!--Strings übernommen von beispiel-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Exzellenz-Koch</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="new_comment">Schreibe einen neuen Kommentar</string>
    <string name="comment">Kommentieren</string>
    <string name="admin_reported_item">TextView</string>
    <string name="spare_recipe">Entmelden</string>
    <string name="profile_display_username">Name</string>
    <string name="profile_display_user_description">Beschreibung</string>
    <string name="profile_display_erstellte_rezepte">veröffentlichte Rezepte</string>
    <string name="flag_user">Nutzer melden</string>
    <string name="profile_display_edit_profile_button">Profil Bearbeiten</string>

    <string name="enter_recipe_title">Rezepttitel eingeben</string>
    <string name="enter_preparing_time">Zeit eingeben</string>
    <string name="enter_cooking_time">Backzeit eingeben</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarisch</string>
    <string name="preparation_description">Beschreibe mit ein paar Worten, wie dein Rezept zubereitet wird.
                                            Überschriften innerhalb des Textes kannst du durch das Setzen von Sternchen kennzeichnen: *Überschriftname* </string>
    <string name="email_address_input">Gib deine E-Mail Adresse ein</string>
    <string name="password_input">Gib dein Passwort ein</string>
    <string name="search_ingredients">Eier, Lauch, Nudeln, Zucker, ...</string>
    <string name="textView_search_title_text">Gibt den Titel des Rezeptes ein, nach dem du suchen willst:</string>
    <string name="search_ingredients_headline">Gib Zutaten ein, nach denen du suchen willst:</string>
    <string name="editText_hint_search_tags">vegetarisch, Hauptspeise, süß, deftig, ...</string>
    <string name="search_tags_headline">Welche Tags soll das Rezept haben?</string>
    <string name="login">Einloggen</string>
    <string name="login_have_no_account">Ich habe noch keinen Account</string>
    <string name="password_stars">**********</string>
    <string name="open">Öffnen</string>
    <string name="feed">Feed</string>
    <string name="menu">Menü</string>
    <string name="write_sth_about_you_headline">Schreibe etwas über dich</string>
    <string name="i_like_cooking_hint">Ich koche gerne...</string>
    <string name="change_login_data">Login Daten ändern</string>
    <string name="save">Speichern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="savoury__tag">herzhaft</string>
    <string name="sweet_tag">süß</string>
    <string name="salty_tag">salzig</string>
    <string name="publish">veröffentlichen</string>
    <string name="ingredient_input_description">Schreibe jede Zutaten und Kapitel so auf:
                                                #Zutaten\n
                                                10 g Zucker\n
                                                10 Apfel\n
                                                #Kapitel 2</string>
    <string name="cheap">günstig</string>
    <string name="favor">Favorisieren</string>
    <string name="cookingtime">Backzeit:</string>
    <string name="preparationtime">Vorbereitungszeit:</string>
    <string name="login_english">Login</string>
    <string name="search_suche">Suche</string>
    <string name="admin_menu_title">Adminbereich</string>
    <string name="search_results">Suchergebnisse</string>
    <string name="date">Datum</string>
    <string name="my_profile_title">Mein Profil</string>
    <string name="min">min</string>
    <string name="preptime">Zubereitungszeit:</string>
    <string name="share">Teilen</string>
    <string name="logout">Ausloggen</string>
    <string name="reportRecipe">melden</string>
    <string name="titel">Titel</string>
    <string name="favourites_head_title">Favoriten</string>
    <string name="favourites_header">Favoriten</string>
    <string name="portions_headline">Anzahl Portionen: </string>
    <string name="portion_amount">Portionenanzahl</string>
    <string name="creation_time_headline">Erstellungsdatum:</string>
    <string name="load_more">Mehr laden</string>

    <string-array name="spinner">
        <item>vegan</item>
        <item>vegetarisch</item>
        <item>süß</item>
    </string-array>

</resources>
